@@ -124,7 +124,8 @@ suite = unittest.TestLoader().loadTestsFromNames(
      'tests.test_rfc8619.suite',
      'tests.test_rfc8649.suite',
      'tests.test_rfc8692.suite',
-     'tests.test_rfc8696.suite']
+     'tests.test_rfc8696.suite',
+     'tests.test_rfc8702.suite']
 )
 
 
